# PauLie

./: .buildinfo  .gitignore  README.md  average_graph_complexity.html  average_otoc.html  classification.html  classification_a_type.html  classification_b_type.html  commutator_graph.html  contributing.html  example_a.html  example_c.html  example_d.html  generate_docs_animations.py  genindex.html  getting_started.html  index.html  intro_tutorial.html  matrix_decomposition.html  objects.inv  optimal_universal_generators.html  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  second_moment.html  test.py
.doctrees/: contributing.doctree  environment.pickle  getting_started.doctree  index.doctree  references.doctree
.doctrees/api/: index.doctree  paulie.application.doctree  paulie.classifier.doctree  paulie.common.doctree  paulie.helpers.doctree
.doctrees/user/: average_graph_complexity.doctree  classification.doctree  commutator_graph.doctree  index.doctree  matrix_decomposition.doctree  optimal_universal_generators.doctree  pauli_compiler.doctree  second_moment.doctree
.github/workflows/: documentation.yml  draft-pdf.yml  publish.yml  tests.yml
_sources/: contributing.rst.txt  getting_started.rst.txt  index.rst.txt  optimal_universal_generators.rst.txt
_sources/api/: index.rst.txt  paulie.application.rst.txt  paulie.classifier.rst.txt  paulie.common.rst.txt  paulie.helpers.rst.txt
_sources/user/: classification.rst.txt  commutator_graph.rst.txt  index.rst.txt  optimal_universal_generators.rst.txt  pauli_compiler.rst.txt  second_moment.rst.txt
_static/: custom.css
api/: index.html  paulie.application.html  paulie.classifier.html  paulie.common.html  paulie.helpers.html
docs/: generate_animations.py
docs/_examples/: animation_graph_docs.py
docs/examples/: animation_graph_docs.py  benchmark_classification.py
docs/source/: conf.py  contributing.rst  getting_started.rst  index.rst  k_local_DLA.rst  matrix_decomposition.rst  optimal_universal_generators.rst  otoc.rst  references.bib  second_moment.rst
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: class.rst
docs/source/api/: index.rst  paulie.application.rst  paulie.classifier.rst  paulie.common.rst  paulie.helpers.rst
docs/source/media/: classification_a_type.html  classification_b_type.html  example_a.html  example_b.html  example_c.html  example_d.html
docs/source/user/: average_graph_complexity.rst  classification.rst  classification_algorithm.rst  commutator_graph.rst  index.rst  matrix_decomposition.rst  pauli_compiler.rst  second_moment.rst
examples/: animation_graph_docs.py  benchmark_classification.py  example_average_pauli_weight.py  test_average_pauli_weight.py
paper/: paper.bib  paper.md  preamble.tex
paper/jats/: paper.jats
src/: moments.jl
src/paulie/: __init__.py  exceptions.py
src/paulie/application/: algebra_basis.py  animation.py  average_graph_complexity.py  average_pauli_weight.py  charges.py  fourpoint.py  get_optimal_su2_n.py  graph_complexity.py  matrix_decomposition.py  otoc.py  pauli_compiler.py  pauli_compiler_optimal.py  pauli_instability.py  plot.py  reach.py  second_moment.py
src/paulie/classifier/: canonical_graph.py  canonicalizer.py  classification.py  classification.pyi  connected_canonicalizer.py  morph_factory.py  morph_factory.pyi  new_classifier.py  observer.py  recording_canonicalizer.py  recording_morph_factory.py  recording_morph_factory.pyi  tracked_canonicalizer.py  tracked_connected_canonicalizer.py  types.py
src/paulie/common/: algebra_basis.py  generators.py  get_graph.py  get_graph.pyi  pauli_string_bitarray.py  pauli_string_bitarray.pyi  pauli_string_collection.py  pauli_string_collection.pyi  pauli_string_factory.py  pauli_string_factory.pyi  pauli_string_linear.py  pauli_string_linear.pyi  pauli_string_parser.py  pauli_string_parser.pyi  random_pauli_strings.py  random_pauli_strings.pyi  standard_basis_generator.py  test_second_moment.py  two_local_generators.py  two_local_generators.pyi
src/paulie/helpers/: _lie_bases.py  _recording.py  _recording.pyi  _renderer.py  drawing.py  drawing.pyi  printing.py  recording.py
tests/: conftest.py  test_algebra_basis.py  test_average pauli_weight.py  test_average_graph_complexity.py  test_charges.py  test_classification.py  test_common.py  test_commutator.py  test_dependency.py  test_fourpoint.py  test_k_local.py  test_lightning_transfer.py  test_matrix_decomposition.py  test_nested.py  test_optimal_universal.py  test_otoc.py  test_pauli_compiler.py  test_pauli_compiler_optimal.py  test_pauli_instability.py  test_plot_graph.py  test_public_api.py  test_recording.py  test_second_moment.py  test_standard_basis_generator.py  test_subgraphs.py
user/: average_graph_complexity.html  classification.html  commutator_graph.html  index.html  matrix_decomposition.html  optimal_universal_generators.html  pauli_compiler.html  second_moment.html
