[tool.poetry]
name = "paulie"
version = "0.0.1"
description = "Classification of Lie algebras"
authors = [
    "Oxana Shaya <shayaoxana@gmail.com>",
    "Konstantin Golovkin",
]
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
networkx = "^3.3"
bitarray = "^3.0.0"
memory-profiler = "^0.61.0"
matplotlib = "^3.10.0"
ruff = "^0.9.5"
six="^1.17.0"
pauliarray = { git = "https://github.com/algolab-quantique/pauliarray.git" }
pytest = "^8.3.5"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
sphinx = "^8.1.3"
mypy = "^1.19.0"
types-six = "^1.17.0.20251009"
types-networkx = "^3.6.1.20251212"
pydata-sphinx-theme = "^0.16.1"

[tool.ruff]
exclude = ["submodules"]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable=[
  'no-name-in-module',
  'import-error',
  'too-many-branches',
  'too-many-arguments',
  'too-many-positional-arguments',
  'too-many-locals',
  'no-else-return',
  'too-many-statements',
  'too-many-return-statements',
  'too-many-instance-attributes',
  'no-member',
  'broad-exception-caught',
  'too-many-public-methods',
  'too-many-lines',
  'consider-using-enumerate',
  'unnecessary-lambda-assignment',
  'unnecessary-lambda',
  'duplicate-code',
  'too-many-nested-blocks',
  'too-few-public-methods',
  'redefined-outer-name',
  'attribute-defined-outside-init',
  'useless-object-inheritance',
  'too-many-boolean-expressions',
  'invalid-name'
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["paulie.common.*"]
check_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["paulie.classifier.classification"]
check_untyped_defs = true
disallow_incomplete_defs = true