[project]
name = "paulie"
version = "0.0.1"
description = "Classification of Pauli Lie algebras"
authors = [
    {name = "Oxana Shaya", email = "shayaoxana@gmail.com"},
    {name = "Konstantin Golovkin"},
    {name = "Mainak Roy"}
]

keywords = ["quantum-simulation", "lie-algebra", "quantum-control"]
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=2.2.2",
    "networkx>=3.3",
    "bitarray>=3.0.0",
    "memory-profiler>=0.61.0",
    "matplotlib>=3.10.0",
    "six>=1.17.0",
    "tqdm>=4.67.1",
    "scipy>=1.17.0",
    "pauliarray @ git+https://github.com/algolab-quantique/pauliarray.git",
    "intersphinx-registry>=0.2602.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.5",
    "pytest>=8.3.5",
    "sphinx>=9.1.0",
    "sphinxcontrib-bibtex>=2.6.1",
    "mypy>=1.19.0",
    "types-six>=1.17.0.20251009",
    "types-networkx>=3.6.1.20251212",
    "sphinx-rtd-theme>=1.1.1",
    "pydata-sphinx-theme>=0.16.1"
]

[project.urls]
Documentation = "https://qpaulie.github.io/PauLie/"
Repository = "https://github.com/QPauLie/PauLie"
Issues = "https://github.com/QPauLie/PauLie/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "slow: slower benchmark-style tests",
]
testpaths = ["tests"]
addopts = ["-p", "no:warnings"]

[tool.ruff]
exclude = ["submodules"]
line-length = 120

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
disable=[
  'no-name-in-module',
  'import-error',
  'too-many-branches',
  'too-many-arguments',
  'too-many-positional-arguments',
  'too-many-locals',
  'no-else-return',
  'too-many-statements',
  'too-many-return-statements',
  'too-many-instance-attributes',
  'no-member',
  'broad-exception-caught',
  'too-many-public-methods',
  'too-many-lines',
  'consider-using-enumerate',
  'unnecessary-lambda-assignment',
  'unnecessary-lambda',
  'duplicate-code',
  'too-many-nested-blocks',
  'too-few-public-methods',
  'redefined-outer-name',
  'attribute-defined-outside-init',
  'useless-object-inheritance',
  'too-many-boolean-expressions',
  'invalid-name',
  'unbalanced-tuple-unpacking',
  'unsupported-assignment-operation'
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["paulie.common.*"]
check_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["paulie.classifier.classification"]
check_untyped_defs = true
disallow_incomplete_defs = true
